cambio de idioma, creacion de cookies y menu hamburguesa en menu responsive

--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,9 @@
 @import url("metro-colors.min.css");
 @import url("animate.css");
 
+body > section:first-of-type { padding-top: 53px; }
 
+section h1:first-of-type { color: hotpink; }
 
 .app-bar {background: #b8cd0c !important;}
 
