--- a/css/site.css
+++ b/css/site.css
@@ -7,19 +7,20 @@
 
 body > nav.app-bar, body > section { display: none; }
 body > section:first-of-type { padding-top: 53px; }
-
+h1 {margin: 50px 0px;}
 section h1:first-of-type { font-weight: 500; }
 
+.footer { width: auto!important; height: 50px!important; background: #002856!important;  }
 .app-bar { background: #b8cd0c !important; }
 .logo-nav {display: block; width: 30%; height: auto; padding: 10px 0px; margin: 0px auto;}
 .title { text-align: inherit; color: #FFF; letter-spacing: 1px; }
 .bgTitles { background: url(../images/tree.gif) no-repeat center center; background-size: cover; color: #fff;	-webkit-text-fill-color: transparent; -webkit-background-clip: text; }
 .green {color: #739e41;}
-
+.mif-home {font-size:25px !important; display: block; margin: 0px auto;}
 body > nav.app-bar, body>footer { display: none; }
 
-#landing { display: block; width: 100%; background: url("images/landing-sinlogo.jpg") no-repeat no-repeat center; background-size: cover;}
-#landing img {display: block; width: 30%; height: auto; margin: 0px auto;}
+#landing { display: block; width: 100%; background: url("../images/landing-sinlogo.jpg") no-repeat no-repeat center; background-size: cover;}
+#landing img {display: block; width: 30%; height: auto; margin: 20px auto;}
 
 #invitation p {text-align: justify;}
 
@@ -27,5 +28,10 @@ body > nav.app-bar, body>footer { display: none; }
 #invitation {padding: 50px 0px 100px 0px;}
 #text-line p {line-height: 20px;margin: 0px;}
 
-#comite {padding: 50px 0px 100px 0px;}
-#comite p {text-align: justify;}
+#committee {padding: 50px 0px 100px 0px;}
+#committee p {text-align: justify;}
+
+#committe-int {padding: 50px 0px 100px 0px !important;}
+
+#footer{ display: block; width: 100%; height: 330px; background: url("../images/footer.jpg") no-repeat no-repeat center; background-size: cover;}
+#footer img {display: block; width: 22%; height: auto; margin: 22px auto;}
