--- a/css/site.css
+++ b/css/site.css
@@ -7,25 +7,29 @@
 
 body > nav.app-bar, body > section { display: none; }
 body > section:first-of-type { padding-top: 53px; }
-h1 {margin: 50px 0px;}
+
+h1 {margin: 25px 0px;}
+
 section h1:first-of-type { font-weight: 500; }
 
-.footer { width: auto!important; height: 50px!important; background: #002856!important;  }
-.app-bar { background: #b8cd0c !important; }
-.logo-nav {display: block; width: 30%; height: auto; padding: 10px 0px; margin: 0px auto;}
+.green {color: #739e41;}
+
 .title { text-align: inherit; color: #FFF; letter-spacing: 1px; }
 .bgTitles { background: url(../images/tree.gif) no-repeat center center; background-size: cover; color: #fff;	-webkit-text-fill-color: transparent; -webkit-background-clip: text; }
-.green {color: #739e41;}
-.mif-home {font-size:25px !important; display: block; margin: 0px auto;}
-body > nav.app-bar, body>footer { display: none; }
+.shadow-container { box-shadow: 0px 5px 15px #6e6f69; }
+
+.carousel-wrapper { position: absolute; top:53px; left:0px; width: 100%; opacity: 0.9; z-index: 0; }
+
+nav.app-bar { background: #b8cd0c !important; }
+nav.app-bar .app-bar-menu > li > a.flag-nav { display: inline-block; width: 15px; height: auto; padding: 0px; }
+nav .flag-nav img { width: 15px; }
+nav ul li a span { color:#8b9a0b; }
 
 #landing { display: block; width: 100%; background: url("../images/landing-sinlogo.jpg") no-repeat no-repeat center; background-size: cover;}
 #landing img {display: block; width: 30%; height: auto; margin: 20px auto;}
 
+#invitation > div:first-of-type { margin-top: 50px; padding: 0px 2% 3% 2%; background: rgba(255, 255, 255, 0.95); border:1px solid #b8cd0c;  }
 #invitation p {text-align: justify;}
-
-
-#invitation {padding: 50px 0px 100px 0px;}
 #text-line p {line-height: 20px;margin: 0px;}
 
 #committee {padding: 50px 0px 100px 0px;}
@@ -33,5 +37,7 @@ body > nav.app-bar, body>footer { display: none; }
 
 #committe-int {padding: 50px 0px 100px 0px !important;}
 
-#footer{ display: block; width: 100%; height: 330px; background: url("../images/footer.jpg") no-repeat no-repeat center; background-size: cover;}
-#footer img {display: block; width: 22%; height: auto; margin: 22px auto;}
+#footer{ display: block; width: 100%; height: auto; padding: 30px 0px; margin-top: 60px; background: url("../images/footer.jpg") no-repeat no-repeat center; background-size: cover;}
+#footer img { display: block; width: 150px; height: auto; margin: 0px auto;}
+
+footer { width: 100%; height: 50px; background: url("../images/Logo-btc-blanco.png") no-repeat center center, #002856; background-size: 50px;  }
