--- a/css/site.css
+++ b/css/site.css
@@ -1,24 +1,26 @@
 @charset "utf-8";
-
 @import url("metro-all.min.css");
 @import url("metro-colors.min.css");
 @import url("animate.css");
 
-
 body > nav.app-bar, body > section { display: none; }
 body > section:first-of-type { padding-top: 53px; }
 
-h1 {margin: 25px 0px;}
+h1 {margin: 25px 0px; text-align: center ;}
 
 section h1:first-of-type { font-weight: 500; }
-
-.green {color: #739e41;}
-
-.title { text-align: inherit; color: #FFF; letter-spacing: 1px; }
+th {background:#b8cd0c; }
+.green {color: #b8cd0c;}
+.bg-green {background:#f8f8f8 !important; border:1px solid #b8cd0c; display: block; width: 100%; height: auto; margin: 30px auto 30px auto; padding: 20px ;}
+.bg-green h2 {font-weight: 500 !important;}
+.title { text-align: center; color: #FFF; letter-spacing: 1px; }
 .bgTitles { background: url(../images/tree.gif) no-repeat center center; background-size: cover; color: #fff;	-webkit-text-fill-color: transparent; -webkit-background-clip: text; }
 .shadow-container { box-shadow: 0px 5px 15px #6e6f69; }
+.table.striped tbody tr:nth-child(odd) {
+    background: #f8f8f8; border: 1px solid #b8cd0c;
+}
 
-.carousel-wrapper { position: absolute; top:53px; left:0px; width: 100%; opacity: 0.9; z-index: 0; }
+/*.carousel-wrapper { position: absolute; top:53px; left:0px; width: 100%; opacity: 0.9; z-index: 0; }*/
 
 nav.app-bar { background: #b8cd0c !important; }
 nav.app-bar .app-bar-menu > li > a.flag-nav { display: inline-block; width: 15px; height: auto; padding: 0px; }
@@ -32,10 +34,12 @@ nav ul li a span { color:#8b9a0b; }
 #invitation p {text-align: justify;}
 #text-line p {line-height: 20px;margin: 0px;}
 
-#committee {padding: 50px 0px 100px 0px;}
+#committee {padding: 50px 0px 0px 0px;}
 #committee p {text-align: justify;}
 
-#committe-int {padding: 50px 0px 100px 0px !important;}
+#committe-int {padding: 50px 0px 0px 0px !important;}
+
+#climate {padding: 50px 0px 50px 0px !important;}
 
 #footer{ display: block; width: 100%; height: auto; padding: 30px 0px; margin-top: 60px; background: url("../images/footer.jpg") no-repeat no-repeat center; background-size: cover;}
 #footer img { display: block; width: 150px; height: auto; margin: 0px auto;}
